# tspgen

./: .gitignore  Cargo.toml  README.md  belgique.html  belgique.txt  france2.html  france2.txt
src/: generation.rs  instance.rs  main.rs  visualisation.rs
src/resolution/: mod.rs  model.rs
src/visualisation/: mod.rs  visual_template.hbs
