[package]
name = "tspgen"
version = "0.1.0"
edition = "2021"
description = "Generates clustered TSP instances"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand           = "0.8"
rand_distr     = "0.4"
rand_chacha    = "0.3"
clap           = { version = "4.0", features = ["derive"] }