[package]
name = "tspgen"
version = "0.1.0"
edition = "2021"
description = "Generates clustered TSP instances"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand           = "0.8"
rand_distr     = "0.4"
rand_chacha    = "0.3"
clap           = { version = "4.0", features = ["derive"] }
tokio          = {version = "1.0", features = ["rt-multi-thread", "macros"]}
futures        = "0.3"
osrm_client    = { path = "../osrm_client" }
handlebars     = "4.3"
serde_json     = "1.0"